v0.2.5
- Initial Release
- Support for cloning repo mentioned in source
- Support for navigating to the folder/file mentionen in config_path, find_in_parent_folders
- Highlight recognized keys and values with different color
- Tooltip for recognized keys/values
- Support for few terragrunt and terraform functions

v0.2.7
- Support for file with relative path
- Support for unary and binary operations
- Bug fixes

v0.2.8
- Support for var.<name> to show the information about variables used
- For every main.tf loaded, it looks for data.tf in the same directory and load if found

v0.2.9
- Support for highlighting variable
- Bug fix for highlighting not available on some key/values

v0.2.10
- Fix for " inside the source like "${read_terragrunt_config(find_in_parent_folders("vpc.hcl")).locals.version}"

v0.4.0
- Rewrittern parser from scratch
- Nested maps and list support
- More compatiblity for terraform configs
- Support for ternary operator
- Support for "for var in" for list and maps
- Added test case for basic validation

v0.4.1
- Improved support for for expression
- Support for opening the repo folder from the workspace(instead of cache) if its already added
- Added splat support